--- a/src/usr.sbin/pwd_mkdb/Makefile
+++ b/src/usr.sbin/pwd_mkdb/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 1999/06/06 13:03:05 espie Exp $
+#	$OpenBSD: Makefile,v 1.8 2002/06/27 20:01:59 art Exp $
 
 # static because it's used by the boot floppy through a chroot.
 
@@ -7,9 +7,5 @@ PROG=	pwd_mkdb
 MAN=	pwd_mkdb.8
 LDADD+=	-lutil
 DPADD+=	${LIBUTIL}
-
-.if (${MACHINE_ARCH} == "m68k")
-CFLAGS+=-O1
-.endif
 
 .include <bsd.prog.mk>
