--- a/src/gnu/usr.bin/lynx/Makefile.bsd-wrapper
+++ b/src/gnu/usr.bin/lynx/Makefile.bsd-wrapper
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.bsd-wrapper,v 1.19 2010/09/06 17:35:57 naddy Exp $
+#	$OpenBSD: Makefile.bsd-wrapper,v 1.20 2011/06/23 22:46:12 schwarze Exp $
 
 MAN=	lynx.1
 CLEANFILES+= lynx.1
@@ -7,7 +7,7 @@ DPADD=	${LIBSSL} ${LIBCRYPTO}
 .if (${MACHINE} == "vax")
 OPT=-O0
 .elif (${MACHINE_ARCH} == "m68k")
-OPT=-O1
+OPT=-O2 -fno-rerun-loop-opt
 .endif
 
 GNUCFLAGS=	CC="${CC}" CFLAGS="${CFLAGS} ${COPTS} ${OPT}"
