--- a/src/usr.sbin/ldomctl/Makefile
+++ b/src/usr.sbin/ldomctl/Makefile
@@ -1,9 +1,20 @@
-#	$OpenBSD: Makefile,v 1.3 2012/10/21 12:47:58 kettenis Exp $
+#	$OpenBSD: Makefile,v 1.4 2012/10/21 12:56:45 kettenis Exp $
+
+.if ${MACHINE} == "sparc64"
 
 PROG=	ldomctl
 SRCS=	ldomctl.c ds.c mdesc.c util.c
-NOMAN=
-CFLAGS+= -Wall
+CFLAGS+=-Wall
+CFLAGS+=-I${.CURDIR}/../ldomd
 DEBUG= -g
+
+.else
+
+NOPROG=	yes
+
+.endif
+
+MAN=	ldomctl.8
+MANSUBDIR=sparc64
 
 .include <bsd.prog.mk>
