--- a/src/usr.sbin/ldomctl/Makefile
+++ b/src/usr.sbin/ldomctl/Makefile
@@ -1,11 +1,13 @@
-#	$OpenBSD: Makefile,v 1.4 2012/10/21 12:56:45 kettenis Exp $
+#	$OpenBSD: Makefile,v 1.5 2012/11/04 18:14:09 kettenis Exp $
 
 .if ${MACHINE} == "sparc64"
 
+.PATH:	${.CURDIR}/../ldomd
+
 PROG=	ldomctl
-SRCS=	ldomctl.c ds.c mdesc.c util.c
+SRCS=	ldomctl.c ds.c mdesc.c util.c pri.c
 CFLAGS+=-Wall
-CFLAGS+=-I${.CURDIR}/../ldomd
+CFLAGS+=-I${.CURDIR}/../ldomd -I${.CURDIR}
 DEBUG= -g
 
 .else
