--- a/src/sbin/dhclient/Makefile
+++ b/src/sbin/dhclient/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.12 2005/07/17 19:33:55 krw Exp $
+# $OpenBSD: Makefile,v 1.13 2012/10/30 18:39:44 krw Exp $
 #
 # Copyright (c) 1996, 1997 The Internet Software Consortium.
 # All rights reserved.
@@ -33,7 +33,7 @@
 .include <bsd.own.mk>
 
 SRCS=	dhclient.c clparse.c dispatch.c bpf.c options.c \
-	conflex.c errwarn.c inet.c packet.c convert.c tables.c \
+	conflex.c errwarn.c packet.c convert.c tables.c \
 	parse.c privsep.c kroute.c
 
 PROG=	dhclient
