--- a/src/regress/usr.bin/mandoc/mdoc/Bd/Makefile
+++ b/src/regress/usr.bin/mandoc/mdoc/Bd/Makefile
@@ -1,6 +1,6 @@
-# $OpenBSD: Makefile,v 1.6 2012/07/07 14:10:55 schwarze Exp $
+# $OpenBSD: Makefile,v 1.7 2012/11/16 13:25:34 schwarze Exp $
 
-REGRESS_TARGETS = empty blank offset-empty spacing break broken
+REGRESS_TARGETS = blank nested spacing  empty offset-empty  break broken
 
 # groff-1.20.1 defect:    
 # - a display breaking another block continues indefinitely
