--- a/src/distrib/special/dhclient/Makefile
+++ b/src/distrib/special/dhclient/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.11 2012/10/30 18:39:44 krw Exp $
+#	$OpenBSD: Makefile,v 1.12 2012/11/09 18:51:56 krw Exp $
 
 .include <bsd.own.mk>
 
@@ -10,6 +10,8 @@ SRCS=	dhclient.c clparse.c dispatch.c bpf.c options.c \
 	conflex.c errwarn.c kroute.c packet.c convert.c \
 	tables.c parse.c privsep.c
 PROG=	dhclient
+LDADD+=	-lutil
+DPADD+= ${LIBUTIL}
 
 .include <bsd.prog.mk>
 .include <bsd.subdir.mk>
