--- a/src/sys/arch/mvme88k/stand/libbug/Makefile
+++ b/src/sys/arch/mvme88k/stand/libbug/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 2004/01/26 19:48:33 miod Exp $
+#	$OpenBSD: Makefile,v 1.8 2012/08/21 14:46:19 pascal Exp $
 
 LIB=bug
 
@@ -12,7 +12,8 @@ DIR_SA=$S/lib/libsa
 CFLAGS+=-I${.CURDIR}/../../include -I${DIR_SA}
 
 SRCS=	delay.c diskrd.c diskwr.c getbrdid.c inchr.c instat.c \
-	netfopen.c netfread.c outln.c outstr.c putchar.c return.c rtc_rd.c
+	netcfig.c netctrl.c netfopen.c netfread.c outln.c outstr.c putchar.c \
+	return.c rtc_rd.c
 
 install:
 
