--- a/src/sys/arch/mvme88k/stand/bootsd/Makefile
+++ b/src/sys/arch/mvme88k/stand/bootsd/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	8.1 (Berkeley) 6/10/93
-#	$OpenBSD: Makefile,v 1.14 2008/04/02 21:53:17 miod Exp $
+#	$OpenBSD: Makefile,v 1.15 2012/08/21 14:46:19 pascal Exp $
 
 S=	${.CURDIR}/../../../..
 DEFS=
@@ -28,7 +28,7 @@ all: ${ALL}
 
 bootsd: ${OBJS} ${STAGE2_CRT} ${LIBS}
 	${LD} ${LDFLAGS} -o $@ \
-		${STAGE2_CRT} ${OBJS} ${LIBS} `cc -print-libgcc-file-name`
+		${STAGE2_CRT} ${OBJS} ${LIBS} `${CC} -print-libgcc-file-name`
 
 install:
 	install ${INSTALL_STRIP} -c -m 555 -g bin -o bin ${BOOTS} ${DESTDIR}${MDEC_DIR}
