--- a/src/sys/lib/libsa/Makefile
+++ b/src/sys/lib/libsa/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.21 2003/06/01 17:00:32 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.22 2005/05/24 22:25:46 millert Exp $
 #	$NetBSD: Makefile,v 1.13 1996/10/02 16:19:51 ws Exp $
 
 LIB=	sa
@@ -12,9 +12,8 @@ DIR=${SAREL}${SADIR}
 AFLAGS+=${XAFLAGS}
 CFLAGS+=${XCFLAGS} -D_STANDALONE -DCOMPAT_UFS $(DEBUGFLAGS) -I${DIR} -I${DIR}/../..
 #
-# Needed for PowerPC
+# Needed for alpha and macppc
 CFLAGS+=$(EXTRACFLAGS)
-CPPFLAGS+=${XCPPFLAGS}
 
 .if defined(USE_LOADFILE)
 SRCS+= loadfile.c
