--- a/src/sys/lib/libsa/Makefile.inc
+++ b/src/sys/lib/libsa/Makefile.inc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.inc,v 1.11 2002/04/29 01:02:28 hugh Exp $
+#	$OpenBSD: Makefile.inc,v 1.12 2003/06/01 17:00:32 deraadt Exp $
 #	$NetBSD: Makefile.inc,v 1.5 1996/09/30 16:01:18 ws Exp $
 #
 #	NOTE: $S must correspond to the top of the 'sys' tree
@@ -13,7 +13,6 @@ SAMAKE= \
 	  CC="${CC}" XCFLAGS="${CFLAGS}" \
 	  AS='${AS}' XAFLAGS='${AFLAGS}' \
 	  LD='${LD}' \
-	  XCPPFLAGS="${CPPFLAGS}" \
 	  SAREL="${SAREL}" \
 	  SADIR="${SADIR}" \
 	  EXTRACFLAGS="${EXTRACFLAGS}"
