--- a/src/sys/arch/hp300/stand/libz/Makefile
+++ b/src/sys/arch/hp300/stand/libz/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 2006/08/17 06:31:10 miod Exp $
+#	$OpenBSD: Makefile,v 1.5 2012/08/21 14:46:18 pascal Exp $
 
 S=${.CURDIR}/../../../..
 ZDST=${.OBJDIR}
@@ -7,6 +7,8 @@ NOPIE=
 
 .PATH: ${S}/lib/libz
 
-.include "${.CURDIR}/../Makefile.inc"
+CPPFLAGS+=	${SA_CPPFLAGS}
+
+CFLAGS+=-I${S}
 
 .include "${S}/lib/libz/Makefile"
