--- a/src/sys/arch/sgi/stand/libsa/Makefile
+++ b/src/sys/arch/sgi/stand/libsa/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.6 2012/08/21 14:46:19 pascal Exp $
+#	$OpenBSD: Makefile,v 1.7 2012/08/31 08:14:08 pascal Exp $
 
 LIB=	sa
 
@@ -17,7 +17,7 @@ CPPFLAGS+= -D__INTERNAL_LIBSA_CREAD ${STANDALONE}
 CPPFLAGS+= ${LIBSA_CPPFLAGS}
 
 # stand routines
-SRCS=	alloc.c exit.c exec.c getfile.c gets.c globals.c \
+SRCS=	alloc.c exit.c getfile.c gets.c globals.c \
 	memcmp.c memcpy.c memset.c printf.c snprintf.c strerror.c strncpy.c
 
 # io routines
