--- a/src/sys/arch/sparc/stand/libsa/Makefile
+++ b/src/sys/arch/sparc/stand/libsa/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.6 2012/08/21 14:46:19 pascal Exp $
+#	$OpenBSD: Makefile,v 1.7 2012/09/02 23:23:51 pascal Exp $
 
 LIB=	sa
 
@@ -10,7 +10,7 @@ CFLAGS= -fno-pie -O2 -D_STANDALONE -D__INTERNAL_LIBSA_CREAD \
 	-I${.CURDIR}/../../../../lib/libsa
 
 # stand routines
-SRCS=	alloc.c exit.c exec.c getfile.c gets.c globals.c \
+SRCS=	alloc.c exit.c getfile.c gets.c globals.c \
 	memcmp.c memcpy.c memset.c printf.c snprintf.c strerror.c strncpy.c
 
 # io routines
