--- a/src/regress/usr.bin/mandoc/man/RS/Makefile
+++ b/src/regress/usr.bin/mandoc/man/RS/Makefile
@@ -1,5 +1,5 @@
-# $OpenBSD: Makefile,v 1.2 2012/07/18 16:55:54 schwarze Exp $
+# $OpenBSD: Makefile,v 1.3 2012/11/18 17:59:03 schwarze Exp $
 
-REGRESS_TARGETS = breaking empty nested
+REGRESS_TARGETS = breaking empty literal nested
 
 .include <bsd.regress.mk>
