--- a/src/distrib/special/kbd/Makefile
+++ b/src/distrib/special/kbd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.15 2009/10/11 12:19:49 maja Exp $
+#	$OpenBSD: Makefile,v 1.16 2009/10/28 07:36:49 deraadt Exp $
 
 .if ${MACHINE} != "aviion" && ${MACHINE} != "mvme68k" && \
     ${MACHINE} != "mvme88k"
@@ -7,10 +7,6 @@ PROG=	kbd
 SRCS=	main.c kbd_wscons.c
 CFLAGS+=-DNOKVM
 .PATH:  ${.CURDIR}/../../../sbin/kbd
-
-LDADD=	-lkvm
-DPADD=	${LIBKVM}
-
 .else
 NOPROG=	Yes
 .endif
