--- a/src/regress/sys/kern/sosplice/Makefile
+++ b/src/regress/sys/kern/sosplice/Makefile
@@ -1,8 +1,9 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.1.1.1 2013/01/03 17:36:38 bluhm Exp $
 
 SUBDIR =
 SUBDIR +=	error
 SUBDIR +=	tcp
 SUBDIR +=	udp
+SUBDIR +=	perf
 
 .include <bsd.subdir.mk>
