--- a/src/sys/arch/i386/stand/boot/Makefile
+++ b/src/sys/arch/i386/stand/boot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.46 2012/10/31 15:22:42 jsing Exp $
+#	$OpenBSD: Makefile,v 1.47 2013/01/18 03:45:23 jsing Exp $
 
 MAN?=	boot.8
 MLINKS?=boot.8 boot.conf.5
@@ -64,6 +64,9 @@ boot.bin: boot
 	objcopy -v -O binary ${PROG} boot.bin
 
 CLEANFILES+= ${PROG}.new
+
+${.CURDIR}/srt0.S: assym.h
+${SADIR}/libsa/gidt.S: assym.h
 
 ${PROG}: $(OBJS)
 	$(LD) $(LDFLAGS) -o ${PROG}.new $(OBJS)
