--- a/src/sys/arch/i386/stand/biosboot/Makefile
+++ b/src/sys/arch/i386/stand/biosboot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.24 2013/01/18 03:45:23 jsing Exp $
+#	$OpenBSD: Makefile,v 1.25 2013/01/18 04:10:16 jsing Exp $
 
 MAN=	biosboot.8
 
@@ -12,7 +12,7 @@ LD=ld
 LDFLAGS=-nostdlib -Ttext 0 -N -x -Bstatic -nopie
 INSTALL_STRIP=
 
-${.CURDIR}/biosboot.S: assym.h
+.depend biosboot.o: assym.h
 
 ${PROG}: $(OBJS)
 	@rm -f $(PROG)
