--- a/src/etc/pf.conf
+++ b/src/etc/pf.conf
@@ -1,8 +1,11 @@
-#	$OpenBSD: pf.conf,v 1.49 2009/09/17 06:39:03 jmc Exp $
+#	$OpenBSD: pf.conf,v 1.50 2011/04/28 00:19:42 mikeb Exp $
 #
 # See pf.conf(5) for syntax and examples.
 # Remember to set net.inet.ip.forwarding=1 and/or net.inet6.ip6.forwarding=1
 # in /etc/sysctl.conf if packets are to be forwarded between interfaces.
+
+# increase default state limit from 10'000 states on busy systems
+#set limit states 100000
 
 set skip on lo
 
