--- a/src/sys/arch/mvme68k/stand/Makefile.inc
+++ b/src/sys/arch/mvme68k/stand/Makefile.inc
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile.inc,v 1.8 2012/11/04 13:36:47 miod Exp $
+#	$OpenBSD: Makefile.inc,v 1.9 2012/12/31 21:35:32 miod Exp $
 
 MDEC_DIR?=/usr/mdec
 CFLAGS+=-Wall -Werror -fno-stack-protector
-#CFLAGS+=-fno-builtin-printf -fno-builtin-putchar -fno-builtin-vprintf
+CFLAGS+=-fno-builtin-printf -fno-builtin-putchar -fno-builtin-vprintf
 CFLAGS+=-DHEAP_START=${HEAP_START}
 
 # Load addresses for first and second stage bootstraps
