--- a/src/libexec/ld.so/ldd/Makefile
+++ b/src/libexec/ld.so/ldd/Makefile
@@ -1,10 +1,16 @@
-#	$OpenBSD: Makefile,v 1.2 2001/05/14 22:18:22 niklas Exp $
+#	$OpenBSD: Makefile,v 1.3 2003/11/20 23:23:09 avsm Exp $
 
+MAN=	ldd.1
+
+.include <bsd.own.mk>
+
+.if (${ELF_TOOLCHAIN:L} == "yes")
 PROG=	ldd
 SRCS=	ldd.c
-MAN=	ldd.1
 #CFLAGS+=-Werror
 
 BINDIR=	/usr/bin
+
+.endif
 
 .include <bsd.prog.mk>
