--- a/src/usr.bin/strings/Makefile
+++ b/src/usr.bin/strings/Makefile
@@ -1,5 +1,8 @@
-#	$OpenBSD: Makefile,v 1.2 1996/06/26 05:39:29 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:51:00 deraadt Exp $
 
+.include <bsd.own.mk>
+.if (${ELF_TOOLCHAIN:L} == "no")
 PROG=	strings
+.endif
 
 .include <bsd.prog.mk>
