--- a/src/usr.sbin/hotplugd/Makefile
+++ b/src/usr.sbin/hotplugd/Makefile
@@ -1,10 +1,10 @@
-# $OpenBSD: Makefile,v 1.12 2010/01/30 20:48:53 miod Exp $
+# $OpenBSD: Makefile,v 1.13 2010/07/20 02:05:51 deraadt Exp $
 
 .if ${MACHINE} == "alpha" || ${MACHINE} == "amd64" || \
     ${MACHINE} == "armish" || ${MACHINE} == "hppa" || \
     ${MACHINE} == "hppa64" || ${MACHINE} == "i386" || \
     ${MACHINE} == "landisk" || ${MACHINE} == "loongson" || \
-    ${MACHINE} == "macppc" || ${MACHINE} == "palm" || \
+    ${MACHINE} == "macppc" || \
     ${MACHINE} == "sgi" || ${MACHINE} == "socppc" || \
     ${MACHINE} == "sparc64" || ${MACHINE} == "zaurus"
 
