--- a/src/sys/dev/microcode/uyap/Makefile
+++ b/src/sys/dev/microcode/uyap/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.6 2007/08/01 21:42:44 deraadt Exp $
+# $OpenBSD: Makefile,v 1.7 2010/01/30 20:48:21 miod Exp $
 
 NOPROG=
 NOMAN=
@@ -10,7 +10,7 @@ CC=${HOSTCC}
     ${MACHINE} == "armish" || ${MACHINE} == "hppa" || \
     ${MACHINE} == "hppa64" || ${MACHINE} == "i386" || \
     ${MACHINE} == "landisk" || ${MACHINE} == "loongson" || \
-    ${MACHINE} == "palm" || ${MACHINE} == "sgi" || \
+    ${MACHINE} == "sgi" || \
     ${MACHINE} == "sparc64" || ${MACHINE} == "zaurus")
 
 FIRM= 	uyap
