--- a/src/sys/arch/alpha/Makefile
+++ b/src/sys/arch/alpha/Makefile
@@ -1,11 +1,11 @@
-#	$OpenBSD: Makefile,v 1.9 2010/11/03 20:08:02 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.10 2010/11/12 17:11:43 deraadt Exp $
 
 S=	${.CURDIR}/../..
 KFILE=	GENERIC
 .if exists(conf/GENERIC.MP)
 KFILE=	GENERIC.MP
 .endif
-TDIRS=	${_arch} include pci isa eisa
+TDIRS=	${_arch} include pci isa eisa mcbus tc
 TAGS=	${.CURDIR}/tags
 
 NOPROG=
