--- a/src/sys/arch/sgi/Makefile
+++ b/src/sys/arch/sgi/Makefile
@@ -1,11 +1,11 @@
-#	$OpenBSD: Makefile,v 1.5 2010/11/03 20:08:03 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.6 2010/11/12 17:11:44 deraadt Exp $
 
 S=	${.CURDIR}/../..
 KFILE=	GENERIC-IP30
 .if exists(conf/GENERIC.MP)
 KFILE=	GENERIC-IP30.MP
 .endif
-TDIRS=	${_arch} include pci isa eisa
+TDIRS=	${_arch} include pci gio hpc localbus xbow
 TAGS=	${.CURDIR}/tags
 
 NOPROG=
