--- a/src/gnu/usr.bin/perl/Makefile.bsd-wrapper
+++ b/src/gnu/usr.bin/perl/Makefile.bsd-wrapper
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile.bsd-wrapper,v 1.85 2011/06/23 22:46:12 schwarze Exp $
+# $OpenBSD: Makefile.bsd-wrapper,v 1.89 2013/03/25 20:44:46 sthen Exp $
 #
 # Build wrapper for Perl 5.16.2
 #
@@ -87,6 +87,7 @@ config.h:
 	cd ${.OBJDIR} && exec /bin/sh config_h.SH
 
 uudmap.h: bitcount.h
+mg_data.h: bitcount.h
 
 bitcount.h: generate_uudmap
 	./generate_uudmap uudmap.h bitcount.h mg_data.h
